feat: 添加变量管理器演示视频

--- a/src/guide/基本用法/变量管理器.md
+++ b/src/guide/基本用法/变量管理器.md
@@ -4,9 +4,9 @@ order: 4
 
 # 变量管理器
 
-变量管理器允许用户查看、编辑并实时监听不同作用域下的变量. 这对于调试脚本、理解功能运行状态以及动态调整参数都非常有帮助. 
+变量管理器允许用户查看、编辑并实时监听不同作用域下的变量. 这对于调试脚本、理解功能运行状态以及动态调整参数都非常有帮助.
 
-![变量管理器](/变量管理器.gif)
+<video src="/变量管理器演示.mp4" type="video/mp4" controls />
 
 ## 界面易用性
 
