补充脚本启动和关闭时的提示

--- a/src/guide/基本用法/脚本库.md
+++ b/src/guide/基本用法/脚本库.md
@@ -4,13 +4,14 @@ order: 2
 
 # 脚本库
 
-:::tip
-要使用这一功能的作者请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md), 里面有详细的编写说明和应用提示.
-:::
+:::tip 要使用这一功能的作者请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md), 里面有详细的编写
+说明和应用提示. :::
 
-酒馆助手的脚本库允许你在后台运行 JavaScript 脚本, 你因而可以做到每 20 楼自动调用一次 AI 来生成对之前剧情的总结等各种功能, 且可以让这些功能与预设、角色卡等绑定.
+酒馆助手的脚本库允许你在后台运行 JavaScript 脚本, 你因而可以做到每 20 楼自动调用一次 AI 来生成对之前剧情的总结等各种功能
+, 且可以让这些功能与预设、角色卡等绑定.
 
-和[渲染器](/guide/基本用法/渲染器.md)一样, 酒馆助手脚本也能使用 "功能详情" 中的各种功能, 如修改世界书、修改预设、设置变量、注入提示词等.
+和[渲染器](/guide/基本用法/渲染器.md)一样, 酒馆助手脚本也能使用 "功能详情" 中的各种功能, 如修改世界书、修改预设、设置变
+量、注入提示词等.
 
 ![脚本库示例](/脚本库.png)
 
@@ -21,6 +22,19 @@ order: 2
 - **全局脚本库**: 适用于酒馆所有聊天
 - **预设脚本库**: 适用于当前预设, 会随预设一同导出
 - **角色脚本库**: 适用于当前角色卡, 会随角色卡一同导出
+
+::: tip 如何在脚本关闭时执行函数使用下面的方法从而在脚本关闭时执行函数:
+```javascript
+$(window).on('page-hide', () => {
+  // 在这里编写脚本关闭时的逻辑
+});
+```
+:::
+
+:::warning
+如果想要在酒馆页面加载完时执行函数, 不要使用 `DOMContentLoaded`, 而是使用 `$(() => { /* 在这里编写函数 */ })`, 因为
+`DOMContentLoaded` 发出时酒馆页面可能还没有加载完. 
+:::
 
 ## 脚本按钮
 
@@ -39,21 +53,21 @@ eventOn(getButtonEvent('按钮名称'), () => {
 });
 ```
 
-:::warning
-`'按钮名称'` 需要与设置的按键名称一致.
-:::
+:::warning `'按钮名称'` 需要与设置的按键名称一致. :::
 
 ### 将酒馆快速回复迁移成酒馆助手脚本
 
 脚本按钮让酒馆助手脚本成为了酒馆快速回复的完全上位替代:
 
-- 相比起写快速回复, AI 对于酒馆助手脚本的知识库更全面, 且我们专门提供了[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)让 AI 了解如何使用酒馆助手.
-- 酒馆助手脚本其实对标的是酒馆插件, 在编写体验上甚至比酒馆插件更好; 而无论酒馆助手脚本还是酒馆插件, 它们所能做的大多数事情是快速回复做不到的.
+- 相比起写快速回复, AI 对于酒馆助手脚本的知识库更全面, 且我们专门提供
+  了[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)让 AI 了解如何使用酒馆助手.
+- 酒馆助手脚本其实对标的是酒馆插件, 在编写体验上甚至比酒馆插件更好; 而无论酒馆助手脚本还是酒馆插件, 它们所能做的大多数事
+  情是快速回复做不到的.
 
 大多数快速回复都能直接写成酒馆助手脚本, 例如快速回复 `/send 推进剧情 | /trigger` 可以写成:
 
 ```javascript
 eventOn(getButtonEvent('推进'), () => {
-  triggerSlash('/send 推进剧情 | /trigger')
+  triggerSlash('/send 推进剧情 | /trigger');
 });
 ```
