--- a/src/guide/基本用法/脚本库.md
+++ b/src/guide/基本用法/脚本库.md
@@ -4,8 +4,10 @@ order: 2
 
 # 脚本库
 
-:::tip 要使用这一功能的作者请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md), 里面有详细的编写
-说明和应用提示. :::
+:::tip
+要使用这一功能的作者请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md), 里面有详细的编写
+说明和应用提示. 
+:::
 
 酒馆助手的脚本库允许你在后台运行 JavaScript 脚本, 你因而可以做到每 20 楼自动调用一次 AI 来生成对之前剧情的总结等各种功能
 , 且可以让这些功能与预设、角色卡等绑定.
@@ -23,7 +25,8 @@ order: 2
 - **预设脚本库**: 适用于当前预设, 会随预设一同导出
 - **角色脚本库**: 适用于当前角色卡, 会随角色卡一同导出
 
-::: tip 如何在脚本关闭时执行函数使用下面的方法从而在脚本关闭时执行函数:
+::: tip 如何在脚本关闭时执行函数
+使用下面的方法从而在脚本关闭时执行函数:
 ```javascript
 $(window).on('page-hide', () => {
   // 在这里编写脚本关闭时的逻辑
