--- a/src/guide/基本用法/脚本库.md
+++ b/src/guide/基本用法/脚本库.md
@@ -28,7 +28,7 @@ order: 2
 ::: tip 如何在脚本关闭时执行函数
 使用下面的方法从而在脚本关闭时执行函数:
 ```javascript
-$(window).on('page-hide', () => {
+$(window).on('pagehide', () => {
   // 在这里编写脚本关闭时的逻辑
 });
 ```
