--- a/src/guide/功能详情/其他工具函数.md
+++ b/src/guide/功能详情/其他工具函数.md
@@ -12,6 +12,31 @@ order: 14
 
 <CustomTOC />
 
+## reloadIframe
+
+在前端界面或脚本内使用, 从而重新加载前端界面或脚本
+
+:::code-group
+
+```[reloadIframe]
+function reloadIframe(): void;
+```
+
+:::
+
+### 示例
+
+```ts
+// 当聊天文件变更时, 重新加载前端界面或脚本
+let current_chat_id = SillyTavern.getCurrentChatId();
+eventOn(tavern_events.CHAT_CHANGED, chat_id => {
+  if (current_chat_id !== chat_id) {
+    current_chat_id = chat_id;
+    reloadIframe();
+  }
+})
+```
+
 ## substitudeMacros
 
 替换字符串中的 SillyTavern 宏
