feat: 补充 reloadIframe 的说明

--- a/src/guide/功能详情/其他工具函数.md
+++ b/src/guide/功能详情/其他工具函数.md
@@ -14,7 +14,9 @@ order: 14
 
 ## reloadIframe
 
-在前端界面或脚本内使用, 从而重新加载前端界面或脚本
+在前端界面或脚本内使用, 从而重新加载前端界面或脚本.
+
+这相当于调用 `window.location.reload()`, 会让分享到全局的接口失效; 如果有需要在重新加载前端界面后沿用的数据, 你应该自行编写重新加载方式.
 
 :::code-group
 
