feat: generate 更多参数

--- a/src/guide/功能详情/请求生成.md
+++ b/src/guide/功能详情/请求生成.md
@@ -441,7 +441,7 @@ type BuiltinPrompt =
 - **类型**: `string`
 - **描述**: API 密钥
 
-#### `model?`
+#### `model`
 
 - **类型**: `string`
 - **描述**: 模型名称
@@ -450,6 +450,31 @@ type BuiltinPrompt =
 
 - **类型**: `string`
 - **描述**: API 源, 默认为 `'openai'`
+
+#### `max_tokens?`
+
+- **类型**: `number`
+- **描述**: 最大回复 tokens 度
+
+#### `temperature?`
+
+- **类型**: `number`
+- **描述**: 温度
+
+#### `frequency_penalty?`
+
+- **类型**: `number`
+- **描述**: 频率惩罚
+
+#### `presence_penalty?`
+
+- **类型**: `number`
+- **描述**: 存在惩罚
+
+#### `top_p?`
+
+- **类型**: `number`
+- **描述**: top_p
 
 :::warning
 `source` 参数用于指定 API 源, 目前支持的源请查看酒馆官方代码[`SillyTavern/src/constants.js`](https://github.com/SillyTavern/SillyTavern/blob/2e3dff73a127679f643e971801cd51173c2c34e7/src/constants.js#L164) (可点击跳转) 所列出的源.
