--- a/src/guide/功能详情/其他工具函数.md
+++ b/src/guide/功能详情/其他工具函数.md
@@ -132,7 +132,7 @@ function getIframeName(): string;
 
 - **iframe 标识名称**: `string`
   - 对于楼层消息是 `TH-message-楼层号-前端界面是该楼层第几个界面`
-  - 对于脚本库是 `TH-script-脚本id`
+  - 对于脚本库是 `TH-script-脚本名称-脚本id`
 
 ## getMessageId <Badge type="warning" text="🚫TavernHelper" />
 
