--- a/src/guide/功能详情/内置第三方库.md
+++ b/src/guide/功能详情/内置第三方库.md
@@ -111,6 +111,15 @@ order: 7
 
 用 `PIXI` 变量访问. 通过它, 你可以很方便地创建 2D 游戏界面、live2d 立绘等.
 
+## showdown
+
+showdown 允许你将 markdown 解析为 html; 酒馆助手据此提供了 `builtin.renderMarkdown` 来便捷化这个功能.
+
+```ts
+builtin.renderMarkdown('**Hello, world!**');
+// => <p><strong>Hello, world!</strong></p>
+```
+
 ## tailwindcss
 
 tailwindcss 提供了很多原子化的样式, 你可以很方便地设置界面样式.
