--- a/src/guide/基本用法/脚本库.md
+++ b/src/guide/基本用法/脚本库.md
@@ -5,8 +5,7 @@ order: 2
 # 脚本库
 
 :::tip
-要使用这一功能的作者请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md), 里面有详细的编写
-说明和应用提示. 
+要使用这一功能的作者请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md), 里面有详细的编写说明和应用提示.
 :::
 
 酒馆助手的脚本库允许你在后台运行 JavaScript 脚本, 你因而可以做到每 20 楼自动调用一次 AI 来生成对之前剧情的总结等各种功能
@@ -27,16 +26,18 @@ order: 2
 
 ::: tip 如何在脚本关闭时执行函数
 使用下面的方法从而在脚本关闭时执行函数:
+
 ```javascript
 $(window).on('pagehide', () => {
   // 在这里编写脚本关闭时的逻辑
 });
 ```
+
 :::
 
 :::warning
 如果想要在酒馆页面加载完时执行函数, 不要使用 `DOMContentLoaded`, 而是使用 `$(() => { /* 在这里编写函数 */ })`, 因为
-`DOMContentLoaded` 发出时酒馆页面可能还没有加载完. 
+`DOMContentLoaded` 发出时酒馆页面可能还没有加载完.
 :::
 
 ## 脚本按钮
