添加一些安装相关内容

--- a/src/guide/关于酒馆助手/安装与更新.md
+++ b/src/guide/关于酒馆助手/安装与更新.md
@@ -30,6 +30,10 @@ order: 0
 
 ### 手动安装
 
+:::warning
+手动安装的扩展无法在 SillyTavern 内一键更新, 需要手动删除并重新安装.
+:::
+
 1. 确保为国外网络环境
 2. 访问 [N0VI028/JS-Slash-Runner](https://github.com/N0VI028/JS-Slash-Runner)
 3. 点击页面右上角绿色按钮 `Code`, 选择 `Download ZIP` 下载压缩包
@@ -39,9 +43,24 @@ order: 0
 - 如果想要为酒馆所有用户安装, 移动到 `SillyTavern/public/scripts/extensions/third-party` 目录
 - 如果想为指定用户安装, 移动到 `SillyTavern/data/default-user/extensions` 目录 (酒馆多用户使用者请将 `default-user` 替换为实际用户名)
 
+
+### 安装指定版本
+
 :::warning
-手动安装的扩展无法在 SillyTavern 内一键更新, 需要手动删除并重新安装.
+注意安装指定版本前, 先卸载酒馆助手
 :::
+
+#### 在线安装
+
+点击 SillyTavern 顶部的扩展图标, 选择安装扩展, 在弹出框中的下方输入框填入版本号:
+
+![安装指定版本](/安装指定版本.png)
+
+#### 手动安装
+
+与[最新版本的手动安装](./安装与更新#手动安装)方法基本一致, 只需要先在 github 仓库页面先切换到特定版本的tag, 然后下载对应版本的压缩包.
+
+![安装指定版本-手动](/安装指定版本-手动.png)
 
 ## 更新方法
 
