--- a/src/guide/关于酒馆助手/常见问题/前端编写问题.md
+++ b/src/guide/关于酒馆助手/常见问题/前端编写问题.md
@@ -20,3 +20,8 @@ order: 3
 
 **问题**: QR 触发不起作用?
 **解决**: 检查并删除代码中的 triggerSlash 函数定义, 避免覆盖扩展的函数
+
+## 在代码预览网站中的显示与酒馆中的显示有差异
+
+**问题**: 在前端代码预览网站中显示正常的代码, 拷贝到酒馆中却样式不一致了
+**解决**: 酒馆楼层中的前端是以`<iframe>`标签包裹的, 需要格外注意使用到`vw`和`vh`等相对于窗口大小的单位, 在酒馆中他们会以楼层iframe为基准, 而不是以视口为基准. 特别来说, `min-height: * vh`为了防止iframe高度异常，会被酒馆助手自动转换为以视口高度为基准, 其余未做处理.
