--- a/src/guide/关于酒馆助手/常见问题/安装与更新问题.md
+++ b/src/guide/关于酒馆助手/常见问题/安装与更新问题.md
@@ -22,6 +22,23 @@ order: 1
 - 网络问题不能下载酒馆助手依赖的第三方库, 请更换网络重试
 - 升级酒馆版本
 
+## 更新或卸载提示成功，但安装新版后仍显示旧版
+
+**问题**: 更新版本提示成功了，或者直接卸载扩展安装新版，但仍显示旧版
+
+**解决**: 酒馆可能存在未卸载干净的情况，建议多次执行卸载、刷新的操作，或者直接[手动删除扩展](./安装与更新问题#提示文件夹已存在)
+
+## 更新前正常使用，更新后扩展异常
+
+**问题**: 更新前正常使用，更新后出现以下问题：
+ - 扩展面板显示不完整
+ - 弹出红色报错弹窗：Error rendering template: Check the DevTools console for more information.
+ - 新版的特性未生效
+
+**解决**: 
+ - 清理浏览器缓存（包括 Cookie 和网站数据也要清理，如果你知道怎么操作，也可以只清理酒馆的特定数据）
+ - 如果使用了 cloudflare、nginx 等反向代理，请调整缓存设置
+
 ## 安装时弹出红色错误弹窗
 
 根据弹窗提示的内容, 可能有以下几种情况, 请点击文字跳转至对应解决方案:
