补充Termux删除文件夹的方法描述

--- a/src/guide/关于酒馆助手/常见问题/安装与更新问题.md
+++ b/src/guide/关于酒馆助手/常见问题/安装与更新问题.md
@@ -22,22 +22,22 @@ order: 1
 - 网络问题不能下载酒馆助手依赖的第三方库, 请更换网络重试
 - 升级酒馆版本
 
-## 更新或卸载提示成功，但安装新版后仍显示旧版
+## 更新或卸载提示成功, 但安装新版后仍显示旧版
 
-**问题**: 更新版本提示成功了，或者直接卸载扩展安装新版，但仍显示旧版
+**问题**: 更新版本提示成功了, 或者直接卸载扩展安装新版, 但仍显示旧版
 
-**解决**: 酒馆可能存在未卸载干净的情况，建议多次执行卸载、刷新的操作，或者直接[手动删除扩展](./安装与更新问题#提示文件夹已存在)
+**解决**: 酒馆可能存在未卸载干净的情况, 建议多次执行卸载、刷新的操作, 或者直接[手动删除扩展](./安装与更新问题#提示文件夹已存在)
 
-## 更新前正常使用，更新后扩展异常
+## 更新前正常使用, 更新后扩展异常
 
-**问题**: 更新前正常使用，更新后出现以下问题：
+**问题**: 更新前正常使用, 更新后出现以下问题：
  - 扩展面板显示不完整
  - 弹出红色报错弹窗：Error rendering template: Check the DevTools console for more information.
  - 新版的特性未生效
 
 **解决**: 
- - 清理浏览器缓存（包括 Cookie 和网站数据也要清理，如果你知道怎么操作，也可以只清理酒馆的特定数据）
- - 如果使用了 cloudflare、nginx 等反向代理，请调整缓存设置
+ - 清理浏览器缓存（包括 Cookie 和网站数据也要清理, 如果你知道怎么操作, 也可以只清理酒馆的特定数据）
+ - 如果使用了 cloudflare、nginx 等反向代理, 请调整缓存设置
 
 ## 安装时弹出红色错误弹窗
 
@@ -97,14 +97,18 @@ order: 1
   ZeroTermux 是根据 Termux 二次开发的一个非盈利性的软件, 安装其内部插件后可直接访问 Termux 文件目录
 
 - 怎么都找不到文件夹但还是提示存在? **终极方案**:
-  1. 打开termux, 如果装了一键脚本输入 `0` 退出
+
+  **尽量直接复制粘贴命令, 避免漏掉空格等字符**
+  
+  1. 打开Termux, 如果装了一键脚本输入 `8` 退出（如果是其他一键脚本, 参考其提供的退出方式）
   2. 输入下面的内容, 回车
 
   ```bash
   cd /
   ```
+  此时前缀会变成 `root@localhost:/#`或类似内容, 在此行继续后面的操作
 
-  1. 输入下面的内容, 回车, 然后等待搜索完成
+  3. 输入下面的内容, 回车, 然后等待搜索完成
 
   ```bash
   find ~ -type d -name "JS-Slash-Runner"
@@ -112,14 +116,14 @@ order: 1
 
   如果文件夹存在, 上面会得到一个路径, 复制下来, 执行第四步
 
-  4.使用 `rm -rf` 为开头 (注意 `rf` 后面要加一个空格), 后接第三步搜索到的路径, 输入命令后回车. 以下是示例, 路径需要你自行替换
+  4. 使用 `rm -rf` 为开头 (注意 `rf` 后面要加一个空格), 后接第三步搜索到的路径, 输入命令后回车. 以下是示例, 路径需要你自行替换
 
   ```bash
   rm -rf /root/SillyTavern/data/default-user/extensions/JS-Slash-Runner
   ```
 
   :::warning
-  此方法删除后不会有任何提示, 请谨慎使用. 下面是直接一键删除的命令, 但可控性较差:
+  此方法删除后不会有任何提示语, 只会另起一空行显示, 请谨慎使用. 下面是直接一键删除的命令, 但可控性较差:
   `find ~ -type d -name "JS-Slash-Runner" | rm -rf`
   :::
 
