--- a/src/guide/关于酒馆助手/常见问题/安装与更新问题.md
+++ b/src/guide/关于酒馆助手/常见问题/安装与更新问题.md
@@ -32,7 +32,7 @@ order: 1
 
 **问题**: 更新前正常使用, 更新后出现以下问题：
  - 扩展面板显示不完整
- - 弹出红色报错弹窗：Error rendering template: Check the DevTools console for more information.
+ - 弹出红色报错弹窗：`Error rendering template: Check the DevTools console for more information.`
  - 新版的特性未生效
 
 **解决**: 
@@ -98,7 +98,7 @@ order: 1
 
 - 怎么都找不到文件夹但还是提示存在? **终极方案**:
 
-  **尽量直接复制粘贴命令, 避免漏掉空格等字符**
+  **尽量直接复制粘贴命令, 避免漏掉空格或者中英文符号混用**
   
   1. 打开Termux, 如果装了一键脚本输入 `8` 退出（如果是其他一键脚本, 参考其提供的退出方式）
   2. 输入下面的内容, 回车
