--- a/src/guide/关于酒馆助手/常见问题/安装与更新问题.md
+++ b/src/guide/关于酒馆助手/常见问题/安装与更新问题.md
@@ -100,7 +100,7 @@ order: 1
 
   **尽量直接复制粘贴命令, 避免漏掉空格或者中英文符号混用**
   
-  1. 打开Termux, 如果装了一键脚本输入 `8` 退出（如果是其他一键脚本, 参考其提供的退出方式）
+  1. 打开Termux, 如果使用了一键脚本, 输入 `8` 退出（如果是其他一键脚本, 参考其提供的退出方式）
   2. 输入下面的内容, 回车
 
   ```bash
@@ -147,7 +147,7 @@ order: 1
 - **Termux端**
 
 1. 启动 Termux
-2. 如果使用了一键脚本, 发送 `0` 退出
+2. 如果使用了一键脚本, 输入 `8` 退出（如果是其他一键脚本, 参考其提供的退出方式）
 3. 发送以下内容更新包管理器
 
    ```bash
