--- a/src/guide/功能详情/酒馆助手宏.md
+++ b/src/guide/功能详情/酒馆助手宏.md
@@ -80,3 +80,22 @@ registerMacros(
 ```
 
 :::
+
+## registerMacroLike
+
+取消注册一个助手宏
+
+:::code-group
+
+```ts [registerMacroLike]
+declare function unregisterMacroLike(regex: RegExp): void;
+```
+
+:::
+
+### 参数
+
+#### `regex`
+
+- **类型**: `RegExp`
+- **描述**: 助手宏的正则表达式
