--- a/src/guide/功能详情/楼层消息/渲染消息.md
+++ b/src/guide/功能详情/楼层消息/渲染消息.md
@@ -12,6 +12,8 @@ order: 4
 
 [点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/displayed_message.d.ts)
 
+<CustomTOC />
+
 ## retrieveDisplayedMessage
 
 获取消息楼层号对应的消息内容 jquery
