--- a/src/guide/功能详情/楼层消息/渲染消息.md
+++ b/src/guide/功能详情/楼层消息/渲染消息.md
@@ -77,7 +77,7 @@ function formatAsDisplayedMessage(text: string, option: FormatAsDisplayedMessage
 
 ```ts [FormatAsDisplayedMessageOption]
 type FormatAsDisplayedMessageOption = {
-  message_id?: "last" | "last_user" | "last_char" | number; // 消息所在的楼层, 要求该楼层已经存在, 即在 `[0, await getLastMessageId()]` 范围内; 默认为 'last'
+  message_id?: "last" | "last_user" | "last_char" | number; // 消息所在的楼层, 要求该楼层已经存在, 即在 `[0, getLastMessageId()]` 范围内; 默认为 'last'
 }
 ```
 
@@ -93,7 +93,7 @@ type FormatAsDisplayedMessageOption = {
 #### `message_id?`
 
 - **类型**: `'last' | 'last_user' | 'last_char' | number`
-- **描述**: 消息所在的楼层, 要求该楼层已经存在, 即在 `[0, await getLastMessageId()]` 范围内; 默认为 `'last'`
+- **描述**: 消息所在的楼层, 要求该楼层已经存在, 即在 `[0, getLastMessageId()]` 范围内; 默认为 `'last'`
 
 ### 返回值
 
