--- a/src/guide/功能详情/世界书/修改世界书.md
+++ b/src/guide/功能详情/世界书/修改世界书.md
@@ -103,6 +103,10 @@ interface ReplaceWorldbookOptions {
 - **`render`**: `debounced|immediate`
   - 对于对世界书的更改, 世界书编辑器应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
+### 异常
+
+- 如果世界书不存在, 将会抛出错误
+
 ### 示例
 
 :::code-group
@@ -171,6 +175,10 @@ type WorldbookUpdater =
 
 - **更新后的世界书条目**: [`WorldbookEntry[]`](./获取世界书#getworldbook)
 
+### 异常
+
+- 如果世界书不存在, 将会抛出错误
+
 ### 示例
 
 :::code-group
@@ -229,6 +237,10 @@ function createWorldbookEntries(
 - **更新后的世界书条目**: [`WorldbookEntry[]`](./获取世界书#getworldbook)
 - **新增的条目**: [`WorldbookEntry[]`](./获取世界书#getworldbook)
 
+### 异常
+
+- 如果世界书不存在, 将会抛出错误
+
 ### 示例
 
 :::code-group
@@ -274,6 +286,10 @@ function deleteWorldbookEntries(
 
 - **更新后的世界书条目**: [`WorldbookEntry[]`](./获取世界书#getworldbook)
 - **被删除的条目**: [`WorldbookEntry[]`](./获取世界书#getworldbook)
+
+### 异常
+
+- 如果世界书不存在, 将会抛出错误
 
 ### 示例
 
