--- a/src/guide/功能详情/世界书/获取世界书.md
+++ b/src/guide/功能详情/世界书/获取世界书.md
@@ -113,6 +113,10 @@ type WorldbookEntry = {
 
 - **世界书内容**: [`WorldbookEntry[]`](./获取世界书#getworldbook)
 
+### 异常
+
+- 如果世界书不存在, 将会抛出错误
+
 ## getWorldbookNames
 
 获取世界书名称列表
