--- a/src/guide/功能详情/其他工具函数.md
+++ b/src/guide/功能详情/其他工具函数.md
@@ -153,6 +153,10 @@ function getMessageId(iframe_name: string): number;
 
 - **楼层号**: `number`
 
+### 异常
+
+- 如果提供的 `iframe_name` 不是前端界面 iframe 标识名称, 将会抛出错误
+
 ## getCurrentMessageId <Badge type="warning" text="🚫TavernHelper" />
 
 获取本前端界面所在楼层的楼层号, **只能在前端界面内使用**
@@ -165,6 +169,10 @@ function getCurrentMessageId(): number;
 
 - **楼层号**: `number`
 
+### 异常
+
+- 如果不在前端界面内使用, 将会抛出错误
+
 ## getScriptId <Badge type="warning" text="🚫TavernHelper" />
 
 获取脚本库的脚本 id
@@ -176,3 +184,7 @@ function getScriptId(): string;
 ### 返回值
 
 - **脚本 id**: `string`
+
+### 异常
+
+- 如果不在脚本内使用, 将会抛出错误
