--- a/src/guide/功能详情/导入酒馆数据.md
+++ b/src/guide/功能详情/导入酒馆数据.md
@@ -71,6 +71,10 @@ function importRawChat(filename: string, content: string): Promise<Response>;
 - **类型**: `string`
 - **描述**: 聊天文件内容
 
+### 异常
+
+- 如果未选择角色卡, 将会抛出错误
+
 ### 示例
 
 :::code-group
