--- a/src/guide/功能详情/楼层消息/渲染消息.md
+++ b/src/guide/功能详情/楼层消息/渲染消息.md
@@ -16,7 +16,7 @@ order: 4
 
 ## retrieveDisplayedMessage
 
-获取消息楼层号对应的消息内容 jquery
+获取消息楼层号对应的消息内容 jquery 实例
 
 相比于一个实用函数, 这更像是一个告诉你可以这样用 jquery 的示例 ([如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)).
 
@@ -98,6 +98,10 @@ type FormatAsDisplayedMessageOption = {
 ### 返回值
 
 - **处理结果**: `string`
+
+### 异常
+
+- 如果提供的消息楼层号 `message_id` 不在 `[0, getLastMessageId()]` 范围内, 将会抛出错误
 
 ### 示例
 
