--- a/src/guide/功能详情/楼层消息/获取消息.md
+++ b/src/guide/功能详情/楼层消息/获取消息.md
@@ -96,6 +96,10 @@ type ChatMessageSwiped = {
 - 返回 `ChatMessageSwiped[]`, 每条消息包含所有消息页
 - 按 message_id 从低到高排序
 
+### 异常
+
+- 如果提供的范围 `range` 无效, 将会抛出错误
+
 ### 示例
 
 :::code-group
