--- a/src/guide/功能详情/触发快速回复命令.md
+++ b/src/guide/功能详情/触发快速回复命令.md
@@ -40,6 +40,10 @@ function triggerSlash(command: string): Promise<string>;
 
 - **Slash 管道结果**: 如果命令出错或执行了 `/abort` 则返回 `undefined`
 
+### 异常
+
+- Slash 命令出错时, 将会抛出错误
+
 ### 示例
 
 ::: code-group
