--- a/src/guide/功能详情/预设/创建预设.md
+++ b/src/guide/功能详情/预设/创建预设.md
@@ -40,6 +40,10 @@ function createPreset(preset_name: Exclude<string, 'in_use'>, preset?: Preset): 
 
 - **是否成功创建, 如果已经存在同名预设或尝试创建名为 `'in_use'` 的预设会失败**: `boolean`
 
+### 异常
+
+- 如果创建的预设内容中存在重复的系统/占位提示词, 将会抛出异常
+
 ## createOrReplacePreset
 
 创建或替换名为 `preset_name` 的预设, 内容为 `preset`
