--- a/src/guide/功能详情/预设/获取预设.md
+++ b/src/guide/功能详情/预设/获取预设.md
@@ -287,6 +287,10 @@ const default_preset: Preset = {
 
 - **预设内容**: [`Preset`](#getpreset) | `null`
 
+### 异常
+
+- 如果预设不存在, 将会抛出错误
+
 ## isPresetNormalPrompt
 
 判断 `prompt` 是否为[普通提示词](#getpreset) (预设界面上可以手动添加的提示词)
