--- a/src/guide/功能详情/预设/修改预设.md
+++ b/src/guide/功能详情/预设/修改预设.md
@@ -96,6 +96,11 @@ interface ReplacePresetOptions {
 - **`render`**: `debounced|immediate`
   - 如果对 `'in_use'` 预设进行操作, 应该防抖渲染 (debounced) 还是立即渲染 (immediate)? 默认为性能更好的防抖渲染
 
+### 异常
+
+- 如果预设不存在, 将会抛出异常
+- 如果替换的预设内容中存在重复的系统/占位提示词, 将会抛出异常
+
 ### 示例
 
 :::code-group
@@ -171,6 +176,11 @@ type PresetUpdater = ((preset: Preset) => Preset) | ((preset: Preset) => Promise
 
 - **更新后的预设内容**: [`Preset`](./获取预设.md#getpreset)
 
+### 异常
+
+- 如果预设不存在, 将会抛出异常
+- 如果替换的预设内容中存在重复的系统/占位提示词, 将会抛出异常
+
 ### 示例
 
 :::code-group
@@ -241,6 +251,11 @@ function setPreset(
 ### 返回值
 
 - **更新后的预设内容**: [`Preset`](./获取预设.md#getpreset)
+
+### 异常
+
+- 如果预设不存在, 将会抛出异常
+- 如果替换的预设内容中存在重复的系统/占位提示词, 将会抛出异常
 
 ### 示例
 
