feat: format_xxx_variable

--- a/src/guide/功能详情/变量/变量类型.md
+++ b/src/guide/功能详情/变量/变量类型.md
@@ -119,8 +119,8 @@ type VariableOption = {
 
 除了这里的变量函数, 你还可以用[消息楼层函数](/guide/功能详情/楼层消息/修改消息.md)批量修改聊天楼层变量.
 
-除了使用函数外, 你还可以在楼层文本或提示词中用 <code v-pre>{{get_message_variable::变量}}</code> 获取**最新楼层**在 `变量` 路径下的值. \
-随着消息楼层增加或删除, 最新楼层会不断变化, 因而 <code v-pre>{{get_message_variable::变量}}</code> 也会不断变化, 始终反映最新的楼层变量值.
+除了使用函数外, 你还可以在楼层文本或提示词中用 <code v-pre>{{get_message_variable::变量}}</code> 或 <code v-pre>{{format_message_variable::变量}}</code> 获取**最新楼层**在 `变量` 路径下的值. \
+随着消息楼层增加或删除, 最新楼层会不断变化, 因而 <code v-pre>{{get_message_variable::变量}}</code> 或 <code v-pre>{{format_message_variable::变量}}</code> 也会不断变化, 始终反映最新的楼层变量值.
 
 如果提供的消息楼层号 `message_id` 超出了范围 `[-chat.length, chat.length)`, 将会抛出错误.
 
