--- a/src/guide/功能详情/变量/获取变量.md
+++ b/src/guide/功能详情/变量/获取变量.md
@@ -87,11 +87,11 @@ const 消息楼层变量 = {
 
 你可以通过以下格式在提示词中获取他们:
 
-- 全局变量: <code v-pre>{{get_global_variable::神乐光.好感度}}</code>
-- 预设变量: <code v-pre>{{get_preset_variable::略}}</code>
-- 角色卡变量: <code v-pre>{{get_character_variable::略}}</code>
-- 聊天变量: <code v-pre>{{get_chat_variable::商品.1.内容}}</code>
-- 消息楼层变量, 将会获取到最新绑定的消息楼层变量: <code v-pre>{{get_message_variable::当前剧情阶段}}</code>
+- 全局变量: <code v-pre>{{get_global_variable::神乐光.好感度}}</code> 或 <code v-pre>{{format_global_variable::神乐光.好感度}}</code>
+- 预设变量: <code v-pre>{{get_preset_variable::略}}</code> 或 <code v-pre>{{format_preset_variable::略}}</code>
+- 角色卡变量: <code v-pre>{{get_character_variable::略}}</code> 或 <code v-pre>{{format_character_variable::略}}</code>
+- 聊天变量: <code v-pre>{{get_chat_variable::商品.1.内容}}</code> 或 <code v-pre>{{format_chat_variable::商品.1.内容}}</code>
+- 消息楼层变量, 将会获取到最新绑定的消息楼层变量: <code v-pre>{{get_message_variable::当前剧情阶段}}</code> 或 <code v-pre>{{format_message_variable::当前剧情阶段}}</code>
 
 获取到的结果与 `JSON.stringify(变量)` 一致, 例如:
 
