--- a/src/guide/功能详情/酒馆助手宏.md
+++ b/src/guide/功能详情/酒馆助手宏.md
@@ -20,11 +20,14 @@ order: 6
 
 酒馆助手内置了以下宏:
 
-- <code v-pre>{{get_global_variable::变量}}</code>: 从全局变量中获取路径 `变量` 下的值
-- <code v-pre>{{get_preset_variable::变量}}</code>: 从当前预设的变量中获取路径 `变量` 下的值
-- <code v-pre>{{get_character_variable::变量}}</code>: 从当前角色卡的变量中获取路径 `变量` 下的值
-- <code v-pre>{{get_chat_variable::变量}}</code>: 从当前聊天文件的变量中获取路径 `变量` 下的值
-- <code v-pre>{{get_message_variable::变量}}</code>: 从最新消息楼层变量中获取路径 `变量` 下的值
+- <code v-pre>{{get_xxx_variable::变量}}</code>: 获取变量值并将其显示为一行 JSON 字符串
+  - <code v-pre>{{get_global_variable::变量}}</code>: 从全局变量中获取路径 `变量` 下的值
+  - <code v-pre>{{get_preset_variable::变量}}</code>: 从当前预设的变量中获取路径 `变量` 下的值
+  - <code v-pre>{{get_character_variable::变量}}</code>: 从当前角色卡的变量中获取路径 `变量` 下的值
+  - <code v-pre>{{get_chat_variable::变量}}</code>: 从当前聊天文件的变量中获取路径 `变量` 下的值
+  - <code v-pre>{{get_message_variable::变量}}</code>: 从最新消息楼层变量中获取路径 `变量` 下的值
+- <code v-pre>{{format_xxx_message::变量}}</code>: 获取消息内容并将其显示为格式化后的 YAML 块
+  - `xxx` 可用类型与 <code v-pre>{{get_xxx_variable::变量}}</code> 相同
 
 例如, 在一些变量框架示例中, 你会使用 <code v-pre>{{get_message_variable::stat_data}}</code> 来获取路径 `stat_data` 下的值来发给 AI.
 
