提示流式界面

--- a/src/guide/功能详情/楼层消息/渲染消息.md
+++ b/src/guide/功能详情/楼层消息/渲染消息.md
@@ -18,7 +18,7 @@ order: 4
 
 获取消息楼层号对应的消息内容 jquery 实例
 
-相比于一个实用函数, 这更像是一个告诉你可以这样用 jquery 的示例 ([如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)).
+相比于一个实用函数, 这更像是一个告诉你可以这样用 jquery 的示例, 你甚至可以据此制作流式前端界面 ([如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)的进阶技巧部分对此有介绍).
 
 :::code-group
 
@@ -68,6 +68,8 @@ retrieveDisplayedMessage(0).append(
 1. 替换字符串中的酒馆宏
 2. 对字符串应用对应的酒馆正则
 3. 将字符串调整为 html 格式
+
+因此你可以像酒馆正则那样任意调整显示内容, 你甚至可以据此制作流式前端界面 ([如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)的进阶技巧部分对此有介绍).
 
 :::code-group
 
