--- a/src/guide/关于酒馆助手/常见问题/前端编写问题.md
+++ b/src/guide/关于酒馆助手/常见问题/前端编写问题.md
@@ -5,12 +5,12 @@ order: 3
 # 前端编写问题
 
 :::tip
-请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md)
+为了避免代码渲染的结果在网页界面中, 和在酒馆中呈现不一致的问题, 请务必先阅读[如何正确使用酒馆助手](/guide/基本用法/如何正确使用酒馆助手.md), 使用配置好的实时编写前端模板创作界面.
 :::
 
 ## 代码渲染问题
 
-**问题**: 编写的代码不显示界面或显示不正确
+**问题**: 编写的代码不显示界面或显示不正确  
 **解决**: 确保同时满足以下条件:
 
 1. 代码使用三个反引号包裹
@@ -18,10 +18,10 @@ order: 3
 
 ## QR 触发失效
 
-**问题**: QR 触发不起作用?
+**问题**: QR 触发不起作用?   
 **解决**: 检查并删除代码中的 triggerSlash 函数定义, 避免覆盖扩展的函数
 
 ## 在代码预览网站中的显示与酒馆中的显示有差异
 
-**问题**: 在前端代码预览网站中显示正常的代码, 拷贝到酒馆中却样式不一致了
+**问题**: 在前端代码预览网站中显示正常的代码, 拷贝到酒馆中却样式不一致了   
 **解决**: 酒馆楼层中的前端是以`<iframe>`标签包裹的, 需要格外注意使用到`vw`和`vh`等相对于窗口大小的单位, 在酒馆中他们会以楼层iframe为基准, 而不是以视口为基准. 特别来说, `min-height: * vh`为了防止iframe高度异常，会被酒馆助手自动转换为以视口高度为基准, 其余未做处理.
