--- a/src/guide/功能详情/注入提示词.md
+++ b/src/guide/功能详情/注入提示词.md
@@ -24,7 +24,7 @@ order: 3
 :::code-group
 
 ```ts [injectPrompts]
-function injectPrompts(prompts: InjectionPrompt[], options?: injectPromptsOptions): void;
+function injectPrompts(prompts: InjectionPrompt[], options?: injectPromptsOptions): { uninject: () => void };
 ```
 
 ```ts [injectPromptsOptions]
@@ -51,6 +51,11 @@ type injectPromptsOptions = {
 
 - **类型**: `boolean`
 - **描述**: 是否只在下一次请求生成中有效; 默认为 false
+
+### 返回值
+
+- **后续操作**
+  - `uninject`: 取消注入这个提示词
 
 ## uninjectPrompts
 
