--- a/src/guide/功能详情/监听和发送事件.md
+++ b/src/guide/功能详情/监听和发送事件.md
@@ -32,9 +32,20 @@ order: 1
 
 当 `eventOn` 所在的前端界面/脚本关闭时, 监听将会自动卸载.
 
-```ts
+:::code-group
+
+```ts [eventOn]
 function eventOn<T extends EventType>(event_type: T, listener: ListenerType[T]): void;
 ```
+
+```ts [EventOnReturn]
+type EventOnReturn = {
+  /** 取消监听 */
+  stop: () => void;
+};
+```
+
+:::
 
 ### 参数
 
@@ -47,6 +58,11 @@ function eventOn<T extends EventType>(event_type: T, listener: ListenerType[T]):
 
 - **类型**: `Function`
 - **描述**: 要注册的函数
+
+### 返回值
+
+- **后续操作**: [`EventOnReturn`](./监听和发送事件#eventOn)
+  - `stop`: 取消监听
 
 ### 示例
 
@@ -91,6 +107,11 @@ function eventMakeLast<T extends EventType>(
 - **类型**: `Function`
 - **描述**: 要注册/调整到最后运行的函数
 
+### 返回值
+
+- **后续操作**: [`EventOnReturn`](./监听和发送事件#eventOn)
+  - `stop`: 取消监听
+
 ### 示例
 
 ```ts
@@ -122,6 +143,11 @@ function eventMakeFirst<T extends EventType>(
 - **类型**: `Function`
 - **描述**: 要注册/调整到最先运行的函数
 
+### 返回值
+
+- **后续操作**: [`EventOnReturn`](./监听和发送事件#eventOn)
+  - `stop`: 取消监听
+
 ### 示例
 
 ```ts
@@ -152,6 +178,11 @@ function eventOnce<T extends EventType>(
 
 - **类型**: `Function`
 - **描述**: 要注册的函数
+
+### 返回值
+
+- **后续操作**: [`EventOnReturn`](./监听和发送事件#eventOn)
+  - `stop`: 取消监听
 
 ### 示例
 
