--- a/src/guide/基本用法/渲染器.md
+++ b/src/guide/基本用法/渲染器.md
@@ -33,8 +33,7 @@ order: 1
 酒馆原生的楼层渲染并不支持 `<script>` 等标签, 虽然能做一些简单美化, 但难以实现支持复杂交互的界面.
 
 为此, 酒馆助手允许你以 iframe 方式渲染前端界面. 这样渲染出来的前端界面相当于一个独立网页, 支持 `<script>` 等标签乃至
-Vue、React 等现代框架; 此外, 酒馆助手为其额外提供了 "功能详情" 中的各种功能, 如修改世界书、修改预设、设置变量、注入提示
-词等. 最初灵感来自阡濯的 [html 代码注入器](https://discord.com/channels/1134557553011998840/1271783456690409554).
+Vue、React 等现代框架; 此外, 酒馆助手为其额外提供了 "功能详情" 中的各种功能, 如修改世界书、修改预设、设置变量、注入提示词等. 最初灵感来自阡濯的 [html 代码注入器](https://discord.com/channels/1134557553011998840/1271783456690409554).
 
 要使用酒馆助手的渲染而非酒馆的渲染, 你应该将前端界面 html 包裹在代码块内再放置于楼层消息中.
 
