--- a/src/guide/基本用法/酒馆体验优化.md
+++ b/src/guide/基本用法/酒馆体验优化.md
@@ -7,3 +7,4 @@ order: 7
 - 自动启用/禁用了一些游玩社区预设、角色卡必然需要设置的选项
 - `角色卡面板-更多...-替换/更新`角色卡按钮将会自动导入最新世界书 (原生酒馆只会更新角色卡, 不会更新世界书)
 - `角色卡面板-导出角色卡`时必然会导出最新世界书 (原生酒馆可能导出陈旧世界书)
+- `要加载 # 条消息`将会实时去除旧楼层的显示, 从而让游玩酒馆更流畅: 如果设置`要加载 # 条消息`为 5, 则页面将最多显示 5 个楼层, 当发送新消息或收到新回复时, 旧楼层将会被自动取消渲染
