--- a/src/guide/基本用法/变量管理器.md
+++ b/src/guide/基本用法/变量管理器.md
@@ -19,3 +19,9 @@ order: 4
 你可以在酒馆输入框左侧魔棒图标内找到它的快捷入口.
 
 ![变量管理器快捷入口](/变量管理器快捷入口.png)
+
+## 注册变量结构
+
+你可以通过 [`registerMvuSchema`](/功能详情/变量/注册变量结构.md) 函数来注册变量结构, 从而让变量管理器能验证变量是否符合要求.
+
+![注册变量结构](/注册变量结构.png)
