--- a/src/guide/基本用法/变量管理器.md
+++ b/src/guide/基本用法/变量管理器.md
@@ -22,6 +22,6 @@ order: 4
 
 ## 注册变量结构
 
-你可以通过 [`registerMvuSchema`](/功能详情/变量/注册变量结构.md) 函数来注册变量结构, 从而让变量管理器能验证变量是否符合要求.
+你可以通过 [`registerMvuSchema`](/guide/功能详情/变量/注册变量结构.md) 函数来注册变量结构, 从而让变量管理器能验证变量是否符合要求.
 
 ![注册变量结构](/注册变量结构.png)
