补充酒馆助手宏说明

--- a/src/guide/功能详情/变量/获取变量.md
+++ b/src/guide/功能详情/变量/获取变量.md
@@ -93,8 +93,11 @@ const 消息楼层变量 = {
 - 聊天变量: <code v-pre>{{get_chat_variable::商品.1.内容}}</code> 或 <code v-pre>{{format_chat_variable::商品.1.内容}}</code>
 - 消息楼层变量, 将会获取到最新绑定的消息楼层变量: <code v-pre>{{get_message_variable::当前剧情阶段}}</code> 或 <code v-pre>{{format_message_variable::当前剧情阶段}}</code>
 
-获取到的结果与 `JSON.stringify(变量)` 一致, 例如:
+一般而言,
 
-- <code v-pre>{{get_global_variable::神乐光.好感度}}</code>: <code v-pre>'50'</code>;
-- <code v-pre>{{get_global_variable::神乐光}}</code>: <code v-pre>'{"好感度":50}'</code>;
-- <code v-pre>{{get_chat_variable::商品}}</code>: <code v-pre>'[{"内容":"..."},{"内容":"..."}]'</code>;
+- <code v-pre>{{get_xxx_variable::变量}}</code> 获取到的结果与 `JSON.stringify(变量)` 一致
+- <code v-pre>{{format_xxx_variable::变量}}</code> 获取到的结果与 `YAML.stringify(变量).trimEnd()` 一致
+
+AI 对于 <code v-pre>{{format_xxx_variable::变量}}</code> 的理解更清晰, 你应该总是优先使用它而非 <code v-pre>{{get_xxx_variable::变量}}</code>.
+
+但 <code v-pre>{{get/format_xxx_variable::变量}}</code> 宏有一个额外特性: 它会忽略变量中所有以 `$` 开头的键. 这个特性允许你在变量中存储一些不应该发给 AI 看的数据. 例如, 对于 `{ $meta: {}, 好感度: 0 }`, 它只会得到 `{ 好感度: 0 }`.
