--- a/src/guide/功能详情/酒馆助手宏.md
+++ b/src/guide/功能详情/酒馆助手宏.md
@@ -29,7 +29,9 @@ order: 6
 - <code v-pre>{{format_xxx_message::变量}}</code>: 获取消息内容并将其显示为格式化后的 YAML 块
   - `xxx` 可用类型与 <code v-pre>{{get_xxx_variable::变量}}</code> 相同
 
-例如, 在一些变量框架示例中, 你会使用 <code v-pre>{{get_message_variable::stat_data}}</code> 来获取路径 `stat_data` 下的值来发给 AI.
+例如, 在一些变量框架示例中, 你会使用 <code v-pre>{{format_message_variable::stat_data}}</code> 来获取路径 `stat_data` 下的值来发给 AI. AI 对于 <code v-pre>{{format_xxx_variable::变量}}</code> 的理解更清晰, 你应该总是优先使用它而非 <code v-pre>{{get_xxx_variable::变量}}</code>.
+
+此外, <code v-pre>{{get/format_xxx_variable::变量}}</code> 宏有一个额外特性: 它会忽略变量中所有以 `$` 开头的键. 这个特性允许你在变量中存储一些不应该发给 AI 看的数据. 例如, 对于 `{ $meta: {}, 好感度: 0 }`, 它只会得到 `{ 好感度: 0 }`.
 
 ## 禁用酒馆助手宏
 
