--- a/src/guide/功能详情/请求生成.md
+++ b/src/guide/功能详情/请求生成.md
@@ -453,27 +453,27 @@ type BuiltinPrompt =
 
 #### `max_tokens?`
 
-- **类型**: `number`
+- **类型**: `'same_as_preset'|'unset'|number`
 - **描述**: 最大回复 tokens 度
 
 #### `temperature?`
 
-- **类型**: `number`
+- **类型**: `'same_as_preset'|'unset'|number`
 - **描述**: 温度
 
 #### `frequency_penalty?`
 
-- **类型**: `number`
+- **类型**: `'same_as_preset'|'unset'|number`
 - **描述**: 频率惩罚
 
 #### `presence_penalty?`
 
-- **类型**: `number`
+- **类型**: `'same_as_preset'|'unset'|number`
 - **描述**: 存在惩罚
 
 #### `top_p?`
 
-- **类型**: `number`
+- **类型**: `'same_as_preset'|'unset'|number`
 - **描述**: top_p
 
 :::warning
