--- a/src/guide/功能详情/酒馆助手宏.md
+++ b/src/guide/功能详情/酒馆助手宏.md
@@ -59,6 +59,13 @@ type MacroLikeContext = {
 }
 ```
 
+```ts [RegisterMacroLikeReturn]
+type RegisterMacroLikeReturn = {
+  /** 取消注册 */
+  unregister: () => void;
+};
+```
+
 :::
 
 ### 参数
@@ -72,6 +79,11 @@ type MacroLikeContext = {
 
 - **类型**: `(context: Context, substring: string, ...args: any[]) => string`
 - **描述**: 针对匹配到的文本所要进行的替换, 其返回值将会是替换结果
+
+### 返回值
+
+- **后续操作**: [`RegisterMacroLikeReturn`](./酒馆助手宏#registermacrolikereturn)
+  - `unregister`: 取消注册
 
 ### 示例
 
