--- a/src/guide/功能详情/酒馆助手宏.md
+++ b/src/guide/功能详情/酒馆助手宏.md
@@ -91,7 +91,7 @@ type RegisterMacroLikeReturn = {
 
 ```ts [注册一个统计行数的宏]
 registerMacros(
-  /<count_lines>(.*?)<count_lines>/gi,
+  /[count_lines](.*?)[/count_lines]/gi,
   context => content.split('\n').length
 );
 ```
