--- a/src/guide/功能详情/酒馆助手宏.md
+++ b/src/guide/功能详情/酒馆助手宏.md
@@ -90,10 +90,7 @@ type RegisterMacroLikeReturn = {
 :::code-group
 
 ```ts [注册一个统计行数的宏]
-registerMacros(
-  /[count_lines](.*?)[/count_lines]/gi,
-  context => content.split('\n').length
-);
+registerMacroLike(/[count_lines](.*?)[/count_lines]/gi, (_context, content) => String(content.split('\n').length));
 ```
 
 :::
