--- a/src/guide/功能详情/导入酒馆数据.md
+++ b/src/guide/功能详情/导入酒馆数据.md
@@ -93,7 +93,7 @@ await importRawChat(聊天文件名, await response.text());
 :::code-group
 
 ```ts [importRawPreset]
-function importRawPreset(filename: string, content: string): Promise<Response>;
+function importRawPreset(filename: string, content: string): Promise<boolean>;
 ```
 
 :::
