补充参考项目

--- a/src/guide/基本用法/音频播放器.md
+++ b/src/guide/基本用法/音频播放器.md
@@ -8,7 +8,7 @@ order: 6
 
 但如果直接在前端界面里直接播放音频, 则可能出现 "多楼层音乐会同时播放"、"同一音频在楼层更新时无法接续播放" 等问题.
 
-为解决这些问题, 酒馆助手制作了音频播放器, 最初灵感来自酒馆官方扩展 [Dynamic Audio](https://github.com/SillyTavern/Extension-Audio).
+为解决这些问题, 酒馆助手制作了音频播放器.
 
 ![音频播放器](/音频播放器.png)
 
