--- a/src/guide/关于酒馆助手/介绍.md
+++ b/src/guide/关于酒馆助手/介绍.md
@@ -34,3 +34,8 @@
 3. 如有疑问, 请勿执行来源不明的脚本
 
 我们不为第三方脚本造成的任何损失负责
+
+## 参考项目
+
+[【SillyTavern / ST酒馆】html代码注入器](https://greasyfork.org/zh-CN/scripts/503174-sillytavern-st%E9%85%92%E9%A6%86-html%E4%BB%A3%E7%A0%81%E6%B3%A8%E5%85%A5%E5%99%A8) - 参考了使用捕捉代码块的方式来替换渲染界面的思路   
+[Dynamic Audio](https://github.com/SillyTavern/Extension-Audio) - 参考了播放器布局
