补充修改预设示例

--- a/src/guide/功能详情/预设/修改预设.md
+++ b/src/guide/功能详情/预设/修改预设.md
@@ -10,6 +10,8 @@ order: 1
 
 [点击查看对应类型定义文件 (可发给 AI 或 IDE 使用, 酒馆助手界面中提供了打包下载)](https://github.com/N0VI028/JS-Slash-Runner/blob/main/%40types/function/preset.d.ts)
 
+<video src="/修改预设.mp4" type="video/mp4" controls />
+
 <CustomTOC />
 
 ## loadPreset
@@ -111,6 +113,12 @@ preset.settings.should_stream = true;
 await replacePreset('in_use', preset);
 ```
 
+```ts [关闭酒馆正在使用的预设中名字包含 "COT" 的条目]
+const preset = getPreset('in_use');
+preset.prompts.filter(prompt => prompt.name.includes('COT')).forEach(prompt => prompt.enabled = false);
+await replacePreset('in_use', preset);
+```
+
 ```ts [为酒馆正在使用的预设添加一个提示词条目]
 const preset = getPreset('in_use');
 preset.prompts.push({
@@ -186,14 +194,21 @@ type PresetUpdater = ((preset: Preset) => Preset) | ((preset: Preset) => Promise
 :::code-group
 
 ```ts [为酒馆正在使用的预设开启流式传输]
-const preset = await updatePresetWith('in_use', preset => {
+await updatePresetWith('in_use', preset => {
   preset.settings.should_stream = true;
   return preset;
 });
 ```
 
+```ts [关闭酒馆正在使用的预设中名字包含 "COT" 的条目]
+await updatePresetWith('in_use', preset => {
+  preset.prompts.filter(prompt => prompt.name.includes('COT')).forEach(prompt => prompt.enabled = false);
+  return preset;
+});
+```
+
 ```ts [为酒馆正在使用的预设添加一个提示词条目]
-const preset = await updatePresetWith('in_use', preset => {
+await updatePresetWith('in_use', preset => {
   preset.prompts.push({
     id: 'new_prompt',
     name: '新提示词',
@@ -209,7 +224,7 @@ const preset = await updatePresetWith('in_use', preset => {
 ```ts [将 '预设A' 的条目按顺序复制到 '预设B' 开头]
 const preset_a = getPreset('预设A');
 const preset_b = getPreset('预设B');
-const preset = await updatePresetWith('预设B', preset => {
+await updatePresetWith('预设B', preset => {
   preset.prompts = [...preset_a.prompts, ...preset.prompts];
   return preset;
 });
