补充请求生成示例

--- a/src/guide/功能详情/请求生成.md
+++ b/src/guide/功能详情/请求生成.md
@@ -131,8 +131,9 @@ type GenerateConfig = {
 
 :::code-group
 
-```ts [流式生成]
-const result = await generate({ user_input: "你好", should_stream: true });
+```ts [请求生成]
+const result = await generate({ user_input: "你好" });
+console.info('收到回复: ', result);
 ```
 
 ```ts [图片输入]
@@ -140,6 +141,7 @@ const result = await generate({
   user_input: "你好",
   image: "https://example.com/image.jpg",
 });
+console.info('收到回复: ', result);
 ```
 
 ```ts [注入、覆盖提示词]
@@ -154,6 +156,18 @@ const result = await generate({
     }
   }
 });
+console.info('收到回复: ', result);
+```
+
+```ts [流式生成]
+// 需要预先监听事件来接收流式回复
+eventOn(iframe_events.STREAM_TOKEN_RECEIVED_FULLY, text => {
+  console.info('收到流式回复: ', text);
+});
+
+// 然后进行生成
+const result = await generate({ user_input: '你好', should_stream: true });
+console.info('收到最终回复: ', result);
 ```
 
 :::
@@ -289,10 +303,12 @@ type GenerateRawConfig = {
 
 ### 示例
 
-```ts
-// 自定义内置提示词顺序, 未在 ordered_prompts 中给出的将不会被使用
+:::code-group
+
+```ts [自定义内置提示词顺序]
 const result = await generateRaw({
   user_input: "你好",
+  // 未在 ordered_prompts 中给出的将不会被使用
   ordered_prompts: [
     "char_description",
     { role: "system", content: "系统提示" },
@@ -300,7 +316,28 @@ const result = await generateRaw({
     "user_input",
   ],
 });
+console.info('收到回复: ', result);
 ```
+
+```ts [使用自定义API和自定义提示词顺序]
+const result = await generateRaw({
+  user_input: '你好',
+  custom_api: {
+    apiurl: 'https://your-proxy-url.com',
+    key: 'your-api-key',
+    model: 'gpt-4',
+    source: 'openai'
+  },
+  ordered_prompts: [
+    'char_description',
+    'chat_history',
+    'user_input',
+  ]
+})
+console.info('收到回复: ', result);
+```
+
+:::
 
 ## 通过事件获取生成结果
 
@@ -322,6 +359,17 @@ const result = await generateRaw({
 ```
 
 ### 示例
+
+```ts [流式生成]
+// 需要预先监听事件来接收流式回复
+eventOn(iframe_events.STREAM_TOKEN_RECEIVED_FULLY, text => {
+  console.info('收到流式回复: ', text);
+});
+
+// 然后进行生成
+const result = await generate({ user_input: '你好', should_stream: true });
+console.info('收到最终回复: ', result);
+```
 
 ## 参数详情
 
