feat: refresh affected

--- a/src/guide/功能详情/楼层消息/创建消息.md
+++ b/src/guide/功能详情/楼层消息/创建消息.md
@@ -37,7 +37,7 @@ type ChatMessageCreating = {
 
 ```ts [CreateChatMessagesOption]
 type CreateChatMessagesOption = {
-  insert_at?: number | 'end';
+  insert_before?: number | 'end';
   refresh?: 'none' | 'affected' | 'all';
 }
 ```
@@ -78,17 +78,23 @@ type CreateChatMessagesOption = {
 - **类型**: `Record<string, any>`
 - **描述**: 消息绑定的数据
 
-#### `insert_at?`
+####
+
+#### `option?`
+
+一个可选的配置对象, 包含以下属性:
+
+`insert_before?`
 
 - **类型**: `number | 'end'`
 - **描述**: 插入到指定楼层前或末尾; 默认为 `'end'`
 
-#### `refresh?`
+`refresh?`
 
 - **类型**: `'none' | 'affected' | 'all'`
 - **描述**: 是否更新楼层在页面上的显示, 只会更新已经被加载在网页上的楼层, 并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'affected'`
   - `'none'`: 不更新页面的显示
-  - `'affected'`: 仅更新被影响楼层的显示
+  - `'affected'`: 仅更新被影响楼层的显示, 更新显示时会发送 `tavern_events.USER_MESSAGE_RENDERED` 或 `tavern_events.CHARACTER_MESSAGE_RENDERED` 事件从而重新渲染前端
   - `'all'`: 重新载入整个聊天消息, 将会触发 `tavern_events.CHAT_CHANGED` 事件
 
 ### 示例
@@ -96,7 +102,7 @@ type CreateChatMessagesOption = {
 :::code-group
 
 ```ts [在第 10 楼前插入一条消息]
-await createChatMessages([{ role: 'user', message: '你好' }], { insert_at: 10 });
+await createChatMessages([{ role: 'user', message: '你好' }], { insert_before: 10 });
 ```
 
 ```ts [在末尾插入一条消息]
