--- a/src/guide/功能详情/楼层消息/渲染消息.md
+++ b/src/guide/功能详情/楼层消息/渲染消息.md
@@ -114,6 +114,52 @@ const text = formatAsDisplayedMessage(
 text == "<p>少女歌剧 speaks in 5</p>";
 ```
 
+## renderOneMessage
+
+刷新或替换单个楼层的显示, 如果该楼层并没有显示在网页上则什么也不做
+
+:::code-group
+
+```ts [renderOneMessage]
+function renderOneMessage(message_id: number, $mes?: JQuery): Promise<void>;
+```
+
+### 参数
+
+#### `message_id`
+
+- **类型**: `number`
+- **描述**: 要刷新的消息楼层号, 必须要酒馆页面显示了该消息楼层才能刷新
+
+#### `$mes?`
+
+- **类型**: `JQuery`
+- **描述**: 要刷新的消息楼层对应的 jquery 实例, 如果未提供则自动通过 `message_id` 获取
+
+:::
+
+### 示例
+
+:::code-group
+
+```ts [刷新显示]
+// 刷新第 0 楼的显示
+await refreshOneMessage(0);
+
+// 刷新最新楼层的显示
+await refreshOneMessage(getLastMessageId());
+```
+
+```ts [替换显示]
+// 强行让第 5 楼显示第 0 楼的消息, 这只会影响网页显示, 不会影响实际聊天记录
+await refreshOneMessage(0, $('#chat > .mes[mesid="5"]'));
+
+// 强行让最后一楼显示第 0 楼的消息, 这只会影响网页显示, 不会影响实际聊天记录
+await refreshOneMessage(0, $('#chat > .mes.last_mes'));
+```
+
+:::
+
 ## builtin.addOneMessage
 
 向网页添加一条楼层渲染, 例如[显示区间消息](https://github.com/StageDog/tavern_resource/blob/main/src/酒馆助手/显示区间消息/index.ts)就是用它实现的.
