--- a/src/guide/功能详情/楼层消息/修改消息.md
+++ b/src/guide/功能详情/楼层消息/修改消息.md
@@ -40,7 +40,11 @@ type SetChatMessagesOption = {
 - **类型**: `Array<{ message_id: number } & (Partial<ChatMessage> | Partial<ChatMessageSwiped>)>`
 - **描述**: 要修改的消息, 必须包含 `message_id` 字段
 
-#### `refresh?`
+#### `option?`
+
+一个可选的配置对象, 包含以下属性:
+
+`refresh?`
 
 - **类型**: `'none' | 'affected' | 'all'`
 - **描述**: 是否更新楼层在页面上的显示, 只会更新已经被加载在网页上的楼层, 并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'affected'`
@@ -93,14 +97,8 @@ function rotateChatMessages(
   begin: number,
   middle: number,
   end: number,
-  option: RotateChatMessagesOption = {}
+  option: SetChatMessagesOption = {}
 ): Promise<void>;
-```
-
-```ts [RotateChatMessagesOption]
-type RotateChatMessagesOption = {
-  refresh?: 'none' | 'all';
-}
 ```
 
 :::
@@ -122,11 +120,16 @@ type RotateChatMessagesOption = {
 - **类型**: `number`
 - **描述**: 修改前结尾楼层的楼层号 + 1
 
-#### `refresh?`
+#### `option?`
 
-- **类型**: `'none' | 'all'`
-- **描述**: 是否更新楼层在页面上的显示, 只会更新已经被加载在网页上的楼层, 并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'all'`
+一个可选的配置对象, 包含以下属性:
+
+`refresh?`
+
+- **类型**: `'none' | 'affected' | 'all'`
+- **描述**: 是否更新楼层在页面上的显示, 只会更新已经被加载在网页上的楼层, 并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'affected'`
   - `'none'`: 不更新页面的显示
+  - `'affected'`: 仅更新被影响楼层的显示, 更新显示时会发送 `tavern_events.USER_MESSAGE_RENDERED` 或 `tavern_events.CHARACTER_MESSAGE_RENDERED` 事件从而重新渲染前端
   - `'all'`: 重新载入整个聊天消息, 将会触发 `tavern_events.CHAT_CHANGED` 事件
 
 ### 示例
