--- a/src/guide/功能详情/楼层消息/删除消息.md
+++ b/src/guide/功能详情/楼层消息/删除消息.md
@@ -21,14 +21,8 @@ order: 3
 ```ts [deleteChatMessages]
 function deleteChatMessages(
   message_ids: number[],
-  option: DeleteChatMessagesOption = {}
+  option: SetChatMessagesOption = {}
 ): Promise<void>;
-```
-
-```ts [DeleteChatMessagesOption]
-type DeleteChatMessagesOption = {
-  refresh?: 'none' | 'all';
-}
 ```
 
 :::
@@ -40,11 +34,16 @@ type DeleteChatMessagesOption = {
 - **类型**: `number[]`
 - **描述**: 要删除的消息楼层号数组
 
-#### `refresh?`
+#### `option?`
 
-- **类型**: `'none' | 'all'`
-- **描述**: 是否更新楼层在页面上的显示, 只会更新已经被加载在网页上的楼层, 并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'all'`
+一个可选的配置对象, 包含以下属性:
+
+`refresh?`
+
+- **类型**: `'none' | 'affected' | 'all'`
+- **描述**: 是否更新楼层在页面上的显示, 只会更新已经被加载在网页上的楼层, 并触发被更新楼层的 "仅格式显示" 正则; 默认为 `'affected'`
   - `'none'`: 不更新页面的显示
+  - `'affected'`: 仅更新被影响楼层的显示, 更新显示时会发送 `tavern_events.USER_MESSAGE_RENDERED` 或 `tavern_events.CHARACTER_MESSAGE_RENDERED` 事件从而重新渲染前端
   - `'all'`: 重新载入整个聊天消息, 将会触发 `tavern_events.CHAT_CHANGED` 事件
 
 ### 示例
