--- a/src/guide/关于酒馆助手/常见问题/安装与更新问题.md
+++ b/src/guide/关于酒馆助手/常见问题/安装与更新问题.md
@@ -77,7 +77,7 @@ order: 1
 3. 检查网络连接 (建议使用不需要国外网络环境的[gitlab安装链接](../安装与更新#sillytavern在线安装)), 重新安装扩展
 
 ::: tip
-如果上方的路径找不到文件夹, 查看`SillyTavern/public/scripts/extensions/third-party`下是否存在
+如果上方的路径找不到文件夹, 或者删除上方路径后酒馆助手依然存在, 请查看`SillyTavern/public/scripts/extensions/third-party`下是否也有`JS-Slash-Runner`
 :::
 
 ---
