--- a/src/guide/功能详情/楼层消息/获取消息.md
+++ b/src/guide/功能详情/楼层消息/获取消息.md
@@ -90,15 +90,13 @@ type ChatMessageSwiped = {
 
 - 返回 `ChatMessage[]`, 每条消息只包含被 AI 使用的消息页
 - 按 message_id 从低到高排序
+- 包含指定楼层范围内实际存在的所有楼层; 如果范围内完全不存在楼层 (如目前只有 3 楼, 但范围为 `4-5`), 则返回空数组
 
 如果 `include_swipes` 为 `true`:
 
 - 返回 `ChatMessageSwiped[]`, 每条消息包含所有消息页
 - 按 message_id 从低到高排序
-
-### 异常
-
-- 如果提供的范围 `range` 无效, 将会抛出错误
+- 包含指定楼层范围内实际存在的所有楼层; 如果范围内完全不存在楼层 (如目前只有 3 楼, 但范围为 `4-5`), 则返回空数组
 
 ### 示例
 
