--- a/src/guide/功能详情/请求生成.md
+++ b/src/guide/功能详情/请求生成.md
@@ -83,7 +83,7 @@ type GenerateConfig = {
 #### `generation_id?`
 
 - **类型**: `string`
-- **描述**: 生成 ID. 如果设置, 可以通过事件监听接收某一 id 请求的生成结果, 或中止特定 id 的请求, 具体见[函数的事件发送](./请求生成#函数的事件发送). 不提供时, 则使用随机 uuid 作为 id
+- **描述**: 请求生成的唯一标识符, 不设置则默认生成一个随机标识符. 当有多个 generate/generateRaw 同时请求生成时, 可以为每个请求指定唯一标识符, 从而能正确监听对应的生成事件.
 
 #### `user_input?`
 
@@ -249,7 +249,7 @@ type GenerateRawConfig = {
 #### `generation_id?`
 
 - **类型**: `string`
-- **描述**: 生成 ID. 如果设置, 可以通过事件监听接收某一 id 请求的生成结果, 或中止特定 id 的请求, 具体见[函数的事件发送](./请求生成#函数的事件发送). 不提供时, 则使用随机 uuid 作为 id
+- **描述**: 请求生成的唯一标识符, 不设置则默认生成一个随机标识符. 当有多个 generate/generateRaw 同时请求生成时, 可以为每个请求指定唯一标识符, 从而能正确监听对应的生成事件.
 
 #### `user_input?`
 
